--- a/less/setup.less
+++ b/less/setup.less
@@ -11,9 +11,20 @@
 /* hi-res laptops and desktops */
 @desktop-lg: ~"only screen and (min-width: 80rem)";
 
+//Color palette
+@dark-primary: #0097A7;
+@primary: #00BCD4;
+@light-primary: #B2EBF2;
+@text-icons: #FFF;
+@accent: #FFC107;
+@primary-text: #212121;
+@secondary-text: #727272;
+@divider-color: #B6B6B6;
 
 body {
+  font-family: 'Roboto', sans-serif;
   font-size: 100%;
+  user-select: none;
   h1 {
     font-size: 2rem;
     line-height: 1.25;
