--- a/less/material-design.less
+++ b/less/material-design.less
@@ -1,10 +1,10 @@
-.material-icon(@icon: '\E8B8', @color: #FFF, @size: 24px) {
-  content: @icon;
-  color: @color;
+[class*="icon"]:before {
+  content: '\E8B8';
+  color: #FFF;
   font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
-  font-size: @size;
+  font-size: 1rem;
   display: inline-block;
   width: 1em;
   height: 1em;
@@ -25,30 +25,32 @@
   font-feature-settings: 'liga';
 }
 
-.material-radio(@on-color: #0097A7, @off-color: #FFF, @font-size: 1.125rem) {
+.location-on-icon:before {
+  content: '\E0C8';
+}
+
+label.radio {
+  cursor: pointer;
+  width: 2rem;
+  height: 1.5rem;
+  vertical-align: top;
+  font-size: 1rem;
+  display: block;
+  &:before {
+    padding: .125rem;
+    content: '\E836';
+    color: #FFF;
+    opacity: 0.7;
+    font-size: 1.125rem;
+    font-family: 'Material Icons';
+    vertical-align: top;
+  }
+  &.checked:before {
+    content: '\E837';
+    color: #0097A7;
+    opacity: 1;
+  }
   input[type=radio] {
     display: none;
-    &:checked + label:before {
-      content: '\E837';
-      color: @on-color;
-      opacity: 1;
-    }
-  }
-  label {
-    cursor: pointer;
-    width: 2rem;
-    height: 1.5rem;
-    vertical-align: top;
-    font-size: 1rem;
-    display: block;
-    &:before {
-      padding: .125rem;
-      content: '\E836';
-      color: @off-color;
-      opacity: 0.7;
-      font-size: @font-size;
-      font-family: 'Material Icons';
-      vertical-align: top;
-    }
   }
 }
